--- a/CQRS/CQRS.Domain.EventFlow/CQRS.Domain.EventFlow.csproj
+++ b/CQRS/CQRS.Domain.EventFlow/CQRS.Domain.EventFlow.csproj
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="EventFlow" Version="0.67.3697" />
-    <PackageReference Include="EventFlow.MongoDB" Version="0.1.26" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EventFlow.MongoDB-develop\Source\EventFlow.MongoDB\EventFlow.MongoDB.csproj" />
   </ItemGroup>
 
 </Project>
